build_output.txt
install
+- install nyon_game
   +- compile exe nyon_game Debug native 1 errors
src\vendor\sysgpu\sysgpu\interface.zig:302:28: error: sysgpu.Interface field 'deviceCreateRenderPipeline'
                                                      	expected type: fn (*sysgpu.device.Device, *const sysgpu.render_pipeline.RenderPipeline.Descriptor) callconv(.@"inline") ?*sysgpu.render_pipeline.RenderPipeline
                                                      	   found type: fn (*sysgpu.device.Device, *const sysgpu.render_pipeline.RenderPipeline.Descriptor) ?*sysgpu.render_pipeline.RenderPipeline
    if (FoundDecl != Decl) @compileError("sysgpu.Interface field '" ++ name ++ "'\n\texpected type: " ++ @typeName(Decl) ++ "\n\t   found type: " ++ @typeName(FoundDecl));
                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\vendor\sysgpu\sysgpu\interface.zig:24:15: note: called at comptime here
    assertDecl(T, "deviceCreateRenderPipeline", fn (device: *sysgpu.Device, descriptor: *const sysgpu.RenderPipeline.Descriptor) callconv(.@"inline") ?*sysgpu.RenderPipeline);
    ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\vendor\sysgpu\main.zig:19:34: note: called at comptime here
pub const Impl = sysgpu.Interface(struct {
                 ~~~~~~~~~~~~~~~~^
referenced by:
    init: src\engine\webgpu_backend.zig:21:19
    init: src\engine.zig:49:54
    6 reference(s) hidden; use '-freference-trace=8' to see all references
error: 1 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\main.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep sysgpu --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -ODebug "-Msysgpu=C:\\Users\\donald\\nyon-game\\src\\vendor\\sysgpu\\main.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_game --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\lib\\" --listen=-

install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 4 errors
src\editor\main_editor.zig:513:40: error: root source file struct 'raylib_stub' has no member named 'vec3Distance'
                const distance = raylib.vec3Distance(camera.camera.target, camera.camera.position);
                                 ~~~~~~^~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    update: src\editor\main_editor.zig:293:56
    main: src\editor.zig:55:26
    4 reference(s) hidden; use '-freference-trace=6' to see all references
src\game\audio_system.zig:29:19: error: root source file struct 'raylib_stub' has no member named 'setAudioListenerPosition'
            raylib.setAudioListenerPosition(pos.x, pos.y, pos.z);
            ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\performance.zig:153:36: error: root source file struct 'raylib_stub' has no member named 'vec3Distance'
            const distance = raylib.vec3Distance(camera_position, group.position);
                             ~~~~~~^~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
src\performance.zig:435:35: error: root source file struct 'raylib_stub' has no member named 'getCameraMatrix'
        const view_matrix = raylib.getCameraMatrix(camera);
                            ~~~~~~^~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
//! Improved raylib stub designed for easy migration to raylib-zig
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
error: 4 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep sysgpu --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -ODebug "-Msysgpu=C:\\Users\\donald\\nyon-game\\src\\vendor\\sysgpu\\main.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.2040+c475f1fcd\\lib\\" --listen=-

Build Summary: 0/5 steps succeeded (2 failed)
install transitive failure
+- install nyon_game transitive failure
|  +- compile exe nyon_game Debug native 1 errors
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 4 errors

error: the following build command failed with exit code 1:
.zig-cache\o\19780eee83ff7dbd4a759dee82a00389\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.2040+c475f1fcd\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x8fbf29ed -Z51d3e499fb8209d2
